bug fix for Mxyz
Ignore-this: 48f6d6c55606c6b4d560d2e02b422882
Now Mzslab = 1 for slab case and Mz=0 for nonslab case.

darcs-hash:20111217235234-88e91-5a5db042b67e83cc68b28268ea8bcafba48cf6b0.gz

--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -2,7 +2,7 @@ all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
-CLEANFILES =  Moperator.o MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o
+CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o
 
 
 MoperatorGeneral: MoperatorGeneral.o
