implemented multirhs rountine and API interface change for SourceSingleSetX[YZ]
Ignore-this: ed54005734c8adb759234018ed270e7f

1) I implemented the mldosrhs rountine to solve ldos at different postions.
2) API interface to SourceSingleSetX[YZ] are changed. passing *J-> passing J.
3) In mldos.c, I add cx, cy and cz to SourceSingleSet in order to indicate the position of currents ( instead of 0,0,0 used before)

darcs-hash:20120116213140-88e91-f2dbcc8e5afd7fab08654eeb2a1dbfd1fd3df7fd.gz

--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -1,8 +1,8 @@
-all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o
+all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
-CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o
+CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o
 
 
 MoperatorGeneral: MoperatorGeneral.o
@@ -23,3 +23,5 @@ ResonatorSolver:ResonatorSolver.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolver.o
 EigenSolver:EigenSolver.o
 	$(CLINKER) -Wall -g -o $@ EigenSolver.o
+ResonatorSolverRHS:ResonatorSolverRHS.o
+	$(CLINKER) -Wall -g -o $@ ResonatorSolverRHS.o
