--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -1,8 +1,8 @@
-all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o
+all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
-CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o
+CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o
 
 
 MoperatorGeneral: MoperatorGeneral.o
@@ -27,3 +27,5 @@ ResonatorSolverRHS:ResonatorSolverRHS.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolverRHS.o
 ResonatorSolverPOLXY:ResonatorSolverPOLXY.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolverPOLXY.o
+ResonatorSolverSolar:ResonatorSolverSolar.o
+	$(CLINKER) -Wall -g -o $@ ResonatorSolverSolar.o
