--- a/MLDOSSolar/Makefile
+++ b/MLDOSSolar/Makefile
@@ -2,7 +2,7 @@ all: MLDOSSolarOpt
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
-CLEANFILES = MLDOSSolarOpt mldossolar.o Resonator.h 
+CLEANFILES = MLDOSSolarOpt mldossolar.o 
 
 MLDOSSolarOpt: mldossolar.o 
 	$(CLINKER) mldossolar.o -o MLDOSSolarOpt $(PETSC_LIB) ${CavityLibPath}/libcavity.a ${NloptLibPath}/libnlopt.a 
