implement MoperatorGeneralBloch to handle bloch period bc (first draft)
Ignore-this: 82c7cf940bd702ea759d89c736884239

darcs-hash:20120224192755-88e91-0cdac867d5f24a1e507d3650a509d5b4641c44b3.gz

--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -1,9 +1,8 @@
-all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o
+all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
-CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o
-
+CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o
 
 MoperatorGeneral: MoperatorGeneral.o
 	$(CLINKER) -Wall -g  -o $@ MoperatorGeneral.o $(PETSC_LIB)
@@ -29,3 +28,7 @@ ResonatorSolverPOLXY:ResonatorSolverPOLXY.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolverPOLXY.o
 ResonatorSolverSolar:ResonatorSolverSolar.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolverSolar.o
+MoperatorGeneralBloch: MoperatorGeneralBloch.o
+	$(CLINKER) -Wall -g  -o $@ MoperatorGeneralBloch.o
+
+
