update Makefiles to add new functions and slepc head
Ignore-this: 71cb550a35e132ff4e3693afdbfafbc5

darcs-hash:20120311215157-88e91-b4fa562309fbcda7c8e862bbcdefd404595637c0.gz

--- a/MLDOSSolar/Makefile
+++ b/MLDOSSolar/Makefile
@@ -1,11 +1,12 @@
 all: MLDOSSolarOpt
 
-include ${PETSC_DIR}/conf/variables
-include ${PETSC_DIR}/conf/rules
+#include ${PETSC_DIR}/conf/variables
+#include ${PETSC_DIR}/conf/rules
 CLEANFILES = MLDOSSolarOpt mldossolar.o 
+include ${SLEPC_DIR}/conf/slepc_common
 
 MLDOSSolarOpt: mldossolar.o 
-	$(CLINKER) mldossolar.o -o MLDOSSolarOpt $(PETSC_LIB) ${CavityLibPath}/libcavity.a ${NloptLibPath}/libnlopt.a 
+	$(CLINKER) mldossolar.o -o MLDOSSolarOpt $(PETSC_LIB) ${CavityLibPath}/libcavity.a ${NloptLibPath}/libnlopt.a ${SLEPC_LIB}
 
 mldossolar: mldossolar.o
 	$(CLINKER) -Wall -g -o $@ mldossolar.o 
