--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -1,11 +1,12 @@
-all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o ldossolar.o
+all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o ldossolar.o MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o
 
-include ${PETSC_DIR}/conf/variables
-include ${PETSC_DIR}/conf/rules
-CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o ldossolar.o
+#include ${PETSC_DIR}/conf/variables
+#include ${PETSC_DIR}/conf/rules
+include ${SLEPC_DIR}/conf/slepc_common
+CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o ldossolar.o  MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o
 
 MoperatorGeneral: MoperatorGeneral.o
-	$(CLINKER) -Wall -g  -o $@ MoperatorGeneral.o $(PETSC_LIB)
+	$(CLINKER) -Wall -g  -o $@ MoperatorGeneral.o 
 SourceGeneration: SourceGeneration.o
 	$(CLINKER) -Wall -g -o $@ SourceGeneration.o 
 PML:PML.o
@@ -32,5 +33,9 @@ MoperatorGeneralBloch: MoperatorGeneralBloch.o
 	$(CLINKER) -Wall -g  -o $@ MoperatorGeneralBloch.o
 ldossolar:ldossolar.o
 	$(CLINKER) -Wall -g -o $@ ldossolar.o
-
-
+MoperatorGeneralBloch2D: MoperatorGeneralBloch2D.o
+	$(CLINKER) -Wall -g  -o $@ MoperatorGeneralBloch2D.o
+ResonatorSolverSolar2D:ResonatorSolverSolar2D.o
+	$(CLINKER) -Wall -g -o $@ ResonatorSolverSolar2D.o
+SolarEigenvaluesSolver:SolarEigenvaluesSolver.o
+	$(CLINKER) -Wall -g -o $@ SolarEigenvaluesSolver.o
