add mpi functionality for parallel k
Ignore-this: 57951d7600b64537fb070bb97f3fb594

darcs-hash:20120321015219-88e91-a99e08cf7384a686a79cbab9ed690a50292af241.gz

--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -1,9 +1,9 @@
-all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o
+all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o mympisetup.o
 
 #include ${PETSC_DIR}/conf/variables
 #include ${PETSC_DIR}/conf/rules
 include ${SLEPC_DIR}/conf/slepc_common
-CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o  MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o
+CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o  MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o mympisetup.o
 
 MoperatorGeneral: MoperatorGeneral.o
 	$(CLINKER) -Wall -g  -o $@ MoperatorGeneral.o 
@@ -37,3 +37,5 @@ ResonatorSolverSolar2D:ResonatorSolverSolar2D.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolverSolar2D.o
 SolarEigenvaluesSolver:SolarEigenvaluesSolver.o
 	$(CLINKER) -Wall -g -o $@ SolarEigenvaluesSolver.o
+mympisetup:mympisetup.o
+	$(CLINKER) -Wall -g -o $@ mympisetup.o
