disable slepc header and function
Ignore-this: a22c728664a845dada5367f1b9d8370

darcs-hash:20120321202111-88e91-f3a08af689832763099f00cae7f9d4b0846cd775.gz

--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -1,8 +1,8 @@
-all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o mympisetup.o
+all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o  mympisetup.o
 
-#include ${PETSC_DIR}/conf/variables
-#include ${PETSC_DIR}/conf/rules
-include ${SLEPC_DIR}/conf/slepc_common
+include ${PETSC_DIR}/conf/variables
+include ${PETSC_DIR}/conf/rules
+#include ${SLEPC_DIR}/conf/slepc_common
 CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o  MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o mympisetup.o
 
 MoperatorGeneral: MoperatorGeneral.o
@@ -35,7 +35,7 @@ MoperatorGeneralBloch2D: MoperatorGeneralBloch2D.o
 	$(CLINKER) -Wall -g  -o $@ MoperatorGeneralBloch2D.o
 ResonatorSolverSolar2D:ResonatorSolverSolar2D.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolverSolar2D.o
-SolarEigenvaluesSolver:SolarEigenvaluesSolver.o
-	$(CLINKER) -Wall -g -o $@ SolarEigenvaluesSolver.o
+#SolarEigenvaluesSolver:SolarEigenvaluesSolver.o
+#	$(CLINKER) -Wall -g -o $@ SolarEigenvaluesSolver.o
 mympisetup:mympisetup.o
 	$(CLINKER) -Wall -g -o $@ mympisetup.o
