--- a/MLDOSPre/Makefile
+++ b/MLDOSPre/Makefile
@@ -5,7 +5,7 @@ include ${PETSC_DIR}/conf/rules
 CLEANFILES = MLDOSPreOpt mldospre.o 
 
 MLDOSPreOpt: mldospre.o 
-	$(CLINKER) mldos.o -o MLDOSPreOpt  ${CavityLibPath}/libcavity.a ${NloptLibPath}/libnlopt.a $(PETSC_LIB)
+	$(CLINKER) mldospre.o -o MLDOSPreOpt  ${CavityLibPath}/libcavity.a ${NloptLibPath}/libnlopt.a $(PETSC_LIB)
 
 mldospre: mldospre.o
 	$(CLINKER) -Wall -g -o $@ mldospre.o 
