--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -1,9 +1,9 @@
-all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o  mympisetup.o ResonatorSolverPre.o prefun.o
+all: MoperatorGeneral.o SourceGeneration.o PML.o Eps.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverSolar.o MoperatorGeneralBloch.o MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o  mympisetup.o
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
 #include ${SLEPC_DIR}/conf/slepc_common
-CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverRHS.o ResonatorSolverPOLXY.o ResonatorSolverSolar.o MoperatorGeneralBloch.o  MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o mympisetup.o  ResonatorSolverPre.o prefun.o
+CLEANFILES =  MoperatorGeneral.o SourceGeneration.o PML.o EPS.o MathTools.o Output.o ldos.o  ResonatorSolver.o EigenSolver.o ResonatorSolverSolar.o MoperatorGeneralBloch.o  MoperatorGeneralBloch2D.o ResonatorSolverSolar2D.o SolarEigenvaluesSolver.o mympisetup.o 
 
 MoperatorGeneral: MoperatorGeneral.o
 	$(CLINKER) -Wall -g  -o $@ MoperatorGeneral.o 
@@ -23,10 +23,6 @@ ResonatorSolver:ResonatorSolver.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolver.o
 EigenSolver:EigenSolver.o
 	$(CLINKER) -Wall -g -o $@ EigenSolver.o
-ResonatorSolverRHS:ResonatorSolverRHS.o
-	$(CLINKER) -Wall -g -o $@ ResonatorSolverRHS.o
-ResonatorSolverPOLXY:ResonatorSolverPOLXY.o
-	$(CLINKER) -Wall -g -o $@ ResonatorSolverPOLXY.o
 ResonatorSolverSolar:ResonatorSolverSolar.o
 	$(CLINKER) -Wall -g -o $@ ResonatorSolverSolar.o
 MoperatorGeneralBloch: MoperatorGeneralBloch.o
@@ -39,7 +35,3 @@ ResonatorSolverSolar2D:ResonatorSolverSolar2D.o
 #	$(CLINKER) -Wall -g -o $@ SolarEigenvaluesSolver.o
 mympisetup:mympisetup.o
 	$(CLINKER) -Wall -g -o $@ mympisetup.o
-ResonatorSolverPre:ResonatorSolverPre.o
-	$(CLINKER) -Wall -g -o $@ ResonatorSolverPre.o
-prefun: prefun.o
-	$(CLINKER) -Wall -g -o $@ prefun.o
