modify codes for petsc-dev: working now
Ignore-this: ddf47f574327cbb18d6f9ee9ba2c566

darcs-hash:20120513015800-88e91-568930ac9e58c0365604ccf394acc9d464662784.gz

--- a/MLDOS/Makefile
+++ b/MLDOS/Makefile
@@ -5,7 +5,7 @@ include ${PETSC_DIR}/conf/rules
 CLEANFILES = MLDOSOpt mldos.o 
 
 MLDOSOpt: mldos.o 
-	$(CLINKER) mldos.o -o MLDOSOpt $(PETSC_LIB) ${CavityLibPath}/libcavity.a ${NloptLibPath}/libnlopt.a 
+	$(CLINKER) mldos.o -o MLDOSOpt ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libcavity.a $(PETSC_LIB)
 
 mldos: mldos.o
 	$(CLINKER) -Wall -g -o $@ mldos.o 
