add ldosmaxminneigensolver.c to compute the eigenvector and eigenvalues
Ignore-this: 868b04042dfcb217b46d97df4e7bc0d5

darcs-hash:20130514011344-88e91-beed5400e2e1a1fb9194f60a9b4878d3b97e2347.gz

--- a/MLDOSMaxMinN/Makefile
+++ b/MLDOSMaxMinN/Makefile
@@ -9,8 +9,8 @@ include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
 CLEANFILES = MLDOSMaxMinNOpt mldosmaxminn.o 
 
-MLDOSMaxMinNOpt: mldosmaxminn.o maxminnobjandconstraint.o ldosmaxminnkernel.o
-	$(CLINKER) mldosmaxminn.o  maxminnobjandconstraint.o ldosmaxminnkernel.o -o MLDOSMaxMinNOpt ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libcavity.a $(PETSC_LIB)
+MLDOSMaxMinNOpt: mldosmaxminn.o maxminnobjandconstraint.o ldosmaxminnkernel.o ldosmaxminneigensolver.o
+	$(CLINKER) mldosmaxminn.o  maxminnobjandconstraint.o ldosmaxminnkernel.o ldosmaxminneigensolver.o -o MLDOSMaxMinNOpt ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libcavity.a $(PETSC_LIB)
 
 mldosmaxminn: mldosmaxminn.o
 	$(CLINKER) -Wall -g -o $@ mldosmaxminn.o 
@@ -20,3 +20,5 @@ maxminnobjandconstraint: maxminnobjandconstraint.o
 
 ldosmaxminnkernel: ldosmaxminnkernel.o
 	$(CLINKER) -Wall -g -o $@ ldosmaxminnkernel.o
+ldosmaxminneigensolver: ldosmaxminneigensolver.o
+	$(CLINKER) -Wall -g -o $@ ldosmaxminneigensolver.o
