change /home/xdliang to ${HOME}
Ignore-this: d12c147987748633a9027b447d50a423

darcs-hash:20130523163102-88e91-7186ee51293b1e2bab7cf972867bbc7c7d0b521e.gz

--- a/MLDOSSHG/Makefile
+++ b/MLDOSSHG/Makefile
@@ -1,9 +1,10 @@
 all: MLDOSSHGOpt
 
-export PETSC_DIR=/home/xdliang/MyLocal/petsc-dev
+export PETSC_DIR=${HOME}/MyLocal/petsc-dev
 export PETSC_ARCH=arch-opt
-export CavityLibPath=/home/xdliang/MyCodes/CavityPETScCodesDev_0/CodesForLibrary
+export CavityLibPath=../CodesForLibrary
 export NloptLibPath=${HOME}/MyLocal/nlopt_0/.libs
+export C_INCLUDE_PATH=${HOME}/MyLocal/include
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
